crates/oxc_react_compiler/tests/snapshots/new-mutability__valid-new-date-nested-set.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/new-mutability/valid-new-date-nested-set.js
---
import { c as _c } from "react/compiler-runtime";
// @validateNoImpureFunctionsInRender @enableNewMutationAliasingModel
function Component(t0) {
	const $ = _c(6);
	const { timestamp } = t0;
	let t1;
	if ($[0] !== timestamp) {
		t1 = new Set([timestamp]);
		$[0] = timestamp;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	const input = t1;
	let t2;
	if ($[2] !== input) {
		t2 = new Set(input);
		$[2] = input;
		$[3] = t2;
	} else {
		t2 = $[3];
	}
	let t3;
	if ($[4] !== t2) {
		t3 = new Date(...t2);
		$[4] = t2;
		$[5] = t3;
	} else {
		t3 = $[5];
	}
	return t3;
}
